# psme-example

./: pyproject.toml
example/: __main__.py
example/subcommands/: add.py  subtract.py
