[tool.poetry]
name = "psme-example"
version = "0.1.0"
description = ""
authors = ["Clay McLeod <Clay.McLeod@STJUDE.org>"]
packages = [
	{ include = "example" }
]

[tool.poetry.dependencies]
python = "^3.9"
psme = "^0.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
psme-example = 'example.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
